# soundshed-guitar

./: .gitignore  README.md  build_linux.sh  build_macos.sh  build_release.bat  build_windows.bat  changelog.md
core/: CMakeLists.txt  INTEGRATION.md  README.md
core/cmake/: GuitarfxIPP.cmake  GuitarfxIPPConfig.cmake  GuitarfxWindowsArch.cmake
core/config/: GuitarFXConfig.h
core/src/: IPluginHost.h  MessageDispatcher.cpp  MessageDispatcher.h  PluginController.cpp  PluginController.h  UiBridge.cpp  UiBridge.h
core/src/controller/: DemoPreviewService.cpp
core/src/dispatcher/: MessageDispatchLibraryComposite.cpp  MessageDispatchMixer.cpp  MessageDispatchSettings.cpp  MessageDispatchState.cpp
core/src/dsp/: BlockSincResampler.h  EffectGuids.h  EffectProcessor.h  EffectRegistry.h  IRWavLoader.h  MultiPresetMixer.cpp  MultiPresetMixer.h  NAMFactoryForce.cpp  RealtimeConvolver.cpp  RealtimeParallel.h  SignalGraphExecutor.cpp  SignalGraphExecutor.h  SimdFFT.h
core/src/models/: ModelHasher.cpp  ModelHasher.h
core/src/network/: PresetServiceClient.cpp  PresetServiceClient.h
core/src/presets/: PresetStorage.cpp  PresetStorage.h  PresetTypes.cpp  PresetTypes.h  PresetTypesJson.h
core/src/resources/: CustomEffectLibrary.cpp  CustomEffectLibrary.h  ResourceLibrary.h
core/src/util/: Base64.cpp  Base64.h  FileIO.cpp  FileIO.h  FileSystem.cpp  FileSystem.h  PathSanitizer.cpp  PathSanitizer.h  Wav.cpp  Wav.h
core/tests/: CMakeLists.txt  Catch2Main.cpp  CustomEffectLibraryTests.cpp  DefaultPresetIntegrityTests.cpp  EffectProcessorTests.cpp  IRConvolutionTests.cpp  MultiPresetMixerTests.cpp  NAMModelDiagnosticTests.cpp  NAMPerformanceBenchmark.cpp  OfflineProcessingTest.cpp  PresetDSPLoadingTests.cpp  PresetDSPProcessingTests.cpp  PresetManagementWorkflowTests.cpp  PresetStorageTests.cpp  RealAudioProcessingTests.cpp  SampleRateBufferTests.cpp  SignalChainMutationStressTest.cpp  SignalChainThreadingBenchmark.cpp  SignalGraphExecutorTests.cpp  SynthSawEffectTests.cpp  TestWavLoad.cpp  WasmEffectHostTests.cpp
core/ui/: index.html  package-lock.json  package.json
core/ui/css/: advanced-panel.css  amp.css  base.css  controls.css  effects.css  fx-library.css  jam.css  layout-designer.css  modals.css  navigation.css  preset-library.css  settings.css  signal-path.css  tone-sharing.css  variables.css
core/ui/data/: audiofx-models.json  default-presets.json  ir-library.json
core/ui/tests/: pluginSupport.test.ts  presetsTitle.test.ts  resourcePickerLabel.test.ts  tone3000.test.ts
core/ui/ts/: archiveUtils.ts  blendEditor.ts  blendManager.ts  blendUtils.ts  bridge.ts  buildFlags.ts  compositeEditor.ts  compositeEffects.ts  compositeTypes.ts  controls.ts  customEffectDesigner.ts  customEffects.ts  dataLibraries.ts  demoAudio.ts  dialogs.ts  effectGuids.ts  eqCurve.ts  featureFlags.ts  fxSelector.ts  iconAssets.ts  jam.ts  jszip-global.d.ts  layoutDesigner.ts  layoutManager.ts  layoutRenderer.ts  layoutTypes.ts  logging.ts  main.ts  messages.ts  metronome.ts  multiPresetMixer.ts  navigation.ts  notifications.ts  pluginSupport.ts  presetScenes.ts  presetV2.ts  presets.ts  resourceBrowser.ts  resourcePickerLabel.ts  riffLibrary.ts  (+16 more)
iplug2/src/: CMakeLists.txt  README.md  cmake_install.cmake
iplug2/src/.github/: copilot-instructions.md
iplug2/src/cmake/: CopyAppResources.cmake  CopyVst3Bundle.cmake  FetchDependencies.cmake
iplug2/src/config/: GuitarFXConfig.h  config.h
iplug2/src/resources/: main.rc  resource.h
iplug2/src/src/: CMakeLists.txt  GuitarFXPluginAdapter.cpp  GuitarFXPluginAdapter.h  cmake_install.cmake  main.cpp
juce/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  setup-notes.md
juce/cmake/: Assets.cmake  FindWebView2.cmake  PamplejuceIPP.cmake  PamplejuceMacOS.cmake  SharedCodeDefaults.cmake  Tests.cmake  XcodePrettify.cmake  ui-build-flags.js.in
juce/packaging/: build-installer.bat  installer.iss
juce/source/: JuceHostedPluginEffect.cpp  JuceHostedPluginEffect.h  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessorAdapter.cpp  PluginProcessorAdapter.h
juce/tests/: HostedPluginBatchScanTests.cpp  HostedPluginGrapheneStateTests.cpp
src/: CMakeLists.txt  README.md  cmake_install.cmake
src/cmake/: CopyAppResources.cmake  CopyVst3Bundle.cmake  FetchDependencies.cmake
src/config/: GuitarFXConfig.h  NAMGuitarConfig.h  config.h
src/docs/: fx-selector-panel-design.md  preset-model-v2-design.md
src/docs/prd/: PRD.md  user-stories.md
src/resources/: app.manifest  main.rc
src/resources/models/: SLO-100 LOWGAIN VALETON.nam
src/resources/ui/: index.html  main.js  package-lock.json  package.json  preset-v2.js  styles.css  tsconfig.json
src/src/: CMakeLists.txt  GuitarFXPlugin.cpp  GuitarFXPlugin.h  NAMGuitarPlugin.cpp  NAMGuitarPlugin.h  cmake_install.cmake  main.cpp
src/src/dsp/: DelayEffect.h  EffectProcessor.h  EffectRegistry.cpp  EffectRegistry.h  FFTConvolution.cpp  FFTConvolution.h  GraphDSPManager.h  IRManager.cpp  IRManager.h  IRTypes.h  MultiPresetMixer.cpp  MultiPresetMixer.h  NAMDSPManager.cpp  NAMDSPManager.h  NAMFactoryForce.cpp  OptimizedConvolver.cpp  OptimizedConvolver.h  ParametricEQ.h  RealtimeConvolver.cpp  RealtimeConvolver.h  ReverbEffect.h  SignalGraphExecutor.cpp  SignalGraphExecutor.h  SimdFFT.h  SimpleCabSim.h  SimpleFFT.h
src/src/network/: PresetServiceClient.cpp
src/src/platform/: cmake_install.cmake
src/src/presets/: PresetMigration.h  PresetStorage.cpp  PresetStorageV2.cpp  PresetStorageV2.h  PresetTypes.cpp  PresetTypes.h  PresetTypesV2.h
src/src/resources/: ResourceLibrary.cpp  ResourceLibrary.h
src/src/ui/: WebUIBridge.cpp
src/src/util/: FileSystem.cpp
src/tests/: CMakeLists.txt  DSPPerformanceTests.cpp  DefaultPresetIntegrityTests.cpp  IRConvolutionTests.cpp  NAMModelDiagnosticTests.cpp  NAMPerformanceBenchmark.cpp  OfflineProcessingTest.cpp  PresetDSPLoadingTests.cpp  PresetDSPProcessingTests.cpp  PresetStorageTests.cpp  RealAudioProcessingTests.cpp  SampleRateBufferTests.cpp  SignalGraphExecutorTests.cpp  SynthSawEffectTests.cpp  TestWavLoad.cpp
src/tools/vst3_debug_host/: CMakeLists.txt  (+1 more)
(+263 files in other folders)
